<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:orientation="vertical"
    android:padding="5dp" >

    <include layout="@layout/listview_row_label" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/option_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_male" />

        <RadioButton
            android:id="@+id/option_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_female" />

        <RadioButton
            android:id="@+id/option_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_other" />
    </RadioGroup>

</LinearLayout>