<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/progress_bar" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/ptr_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_slim_margin"
                android:paddingLeft="@dimen/activity_horizontal_slim_margin"
                android:paddingRight="@dimen/activity_horizontal_slim_margin"
                android:paddingTop="@dimen/activity_vertical_slim_margin">

                <include layout="@layout/fragment_stub_layout" />

                <LinearLayout
                    android:id="@+id/pickers_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout style="@style/MenuCardLayout">

                        <org.dhis2.mobile.ui.views.FontTextView
                            android:id="@+id/org_unit_dialog_invoker"
                            style="@style/DialogInvokerLayout"
                            android:text="@string/choose_unit"
                            app:font="@string/regular_font_name" />
                    </LinearLayout>

                    <LinearLayout style="@style/MenuCardLayout">

                        <org.dhis2.mobile.ui.views.FontTextView
                            android:id="@+id/data_set_dialog_invoker"
                            style="@style/DialogInvokerLayout"
                            android:text="@string/choose_data_set"
                            app:font="@string/regular_font_name"/>
                    </LinearLayout>

                    <LinearLayout style="@style/MenuCardLayout">

                        <org.dhis2.mobile.ui.views.FontTextView
                            android:id="@+id/period_picker_invoker"
                            style="@style/DialogInvokerLayout"
                            android:text="@string/choose_period"
                            app:font="@string/regular_font_name" />
                    </LinearLayout>

                    <include
                        layout="@layout/button_form_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>

